html syntax created

--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Architech Website</title>
 </head>
 <body>
-    Shanto
+    <header>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+    
 </body>
 </html>
