--- a/index.html
+++ b/index.html
@@ -45,6 +45,24 @@
         
     </header>
     <main>
+        <!-- Features section  -->
+        <section>
+            <div class="feature-container">
+                <div class="feature-img">   
+                    <img src="images/team1.png" alt="">
+                    <img src="images/team2.png" alt="">
+                    <img src="images/team3.png" alt="">
+                    <img src="images/team4.png" alt="">
+                </div>
+            <div>
+                <div class="quick-feature">
+                    <h1 ><span id="quick">Quick list</span> <span id="ofOur">of Our </span><br><span id="features">Features</span></h1>
+                    <p class="container-text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <div class="img"><button class="btn-primary">Explore More</button></div>
+                </div>
+            </div>
+            
+        </section>
 
     </main>
     <footer>
